refactor(login): 移除KCEF和DownloadBrowser功能
- 删除了DownloadBrowserScreen、DownloadBrowserViewModel及相关layout、state管理逻辑
- 从导航和router中清除与DownloadBrowser相关的所有内容
- 简化LoginOptionScreen，去除了浏览器可用性检查逻辑
- 优化LoginViewModel初始化，移除KCEF初始化代码
- 将依赖的webview库从`multiplatform`更换为`kdroidfilter`，更新版本号
- 清理Proguard配置文件中不再使用的KCEF相关配置